--- a/src/Orders/orderList.html
+++ b/src/Orders/orderList.html
@@ -35,7 +35,10 @@
             </a>
           </li>
           <li>
-            <a href="cart.html" class="flex items-center gap-2 text-[12px]">
+            <a
+              href="shoppingCart.html"
+              class="flex items-center gap-2 text-[12px]"
+            >
               <i class="fa-solid fa-cart-shopping"></i>
               <span>Shopping Cart</span>
             </a>
@@ -56,46 +59,6 @@
       </ul>
     </nav>
 
-    <section class="flex full-page items-center container m-auto w-3/4">
-      <div class="flex">
-        <div class="w-2/5 h-96">
-          <img src="./images//mainPage.png" alt="" class="h-full w-2/3" />
-        </div>
-        <div class="w-3/5">
-          <div class="flex gap-y-8 flex-col h-full">
-            <div class="flex flex-col gap-y-4">
-              <div
-                class="text-important-black-color font-bold font-lora text-3xl"
-              >
-                Hero With Gold
-              </div>
-              <div class="flex gap-x-2">
-                <span>by</span>
-                <span class="text-important-black-color font-lora font-bold"
-                  >Dougie Rogers</span
-                >
-              </div>
-            </div>
-            <div>
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse
-              consequuntur quia itaque ab perspiciatis totam cupiditate quam
-              provident aspernatur alias ipsa deserunt eum magnam quisquam
-              inventore eveniet, dolore, vitae officia. Fuga ab similique minima
-              aliquam perferendis consequatur ducimus culpa rem? Necessitatibus,
-              similique architecto! Minus, laboriosam consectetur? Illo et
-              debitis magnam!
-            </div>
-            <button
-              class="flex items-center justify-center bg-black rounded-md text-white w-1/4 py-1 gap-x-2"
-            >
-              <i class="fa fa-shopping-cart"></i>
-              <span>Add to cart</span>
-            </button>
-          </div>
-        </div>
-      </div>
-    </section>
-
     <footer class="h-14 mt-10 bg-footer-color text-xs">
       <div class="container m-auto flex items-center justify-between h-full">
         <div class="flex gap-x-2 items-center">
@@ -104,6 +67,11 @@
             IT Perspectives
           </div>
         </div>
+        <button class="p-1 px-1.5 rounded-sm bg-black">
+          <a href="#">
+            <i class="fa-solid fa-chevron-up text-white"></i>
+          </a>
+        </button>
       </div>
     </footer>
   </body>
