--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,10 @@
             </a>
           </li>
           <li>
-            <a href="cart.html" class="flex items-center gap-2 text-[12px]">
+            <a
+              href="shoppingCart.html"
+              class="flex items-center gap-2 text-[12px]"
+            >
               <i class="fa-solid fa-cart-shopping"></i>
               <span>Shopping Cart</span>
             </a>
