--- a/src/index.html
+++ b/src/index.html
@@ -44,7 +44,10 @@
             </a>
           </li>
           <li>
-            <a href="orders.html" class="flex items-center gap-2 text-[12px]">
+            <a
+              href="./Orders/orderList.html"
+              class="flex items-center gap-2 text-[12px]"
+            >
               <i class="fa-solid fa-truck-fast"></i>
               <span>Orders</span>
             </a>
@@ -88,202 +91,214 @@
           <div class="">
             <div class="py-8">Best Books of the month</div>
             <div class="flex flex-wrap gap-x-8">
-              <div class="flex flex-col w-[15%] gap-y-4 h-[400px]">
-                <img
-                  src="./images/mainPage.png"
-                  alt=""
-                  class="h-[70%] w-full"
-                />
-                <div class="h-[30%] flex flex-col justify-between">
-                  <div class="flex justify-between">
-                    <div>
-                      <div
-                        class="text-important-black-color font-lora font-bold text-md"
-                      >
-                        Hero with Gold
+              <div class="flex flex-col w-[15%]">
+                <a href="viewBook.html" class="flex flex-col h-full">
+                  <img
+                    src="./images/mainPage.png"
+                    alt=""
+                    class="h-[70%] w-full"
+                  />
+                  <div class="h-[30%] flex py-2 flex-col pt-4">
+                    <div class="flex justify-between">
+                      <div class="">
+                        <div
+                          class="text-important-black-color font-lora font-bold text-md"
+                        >
+                          Hero with Gold
+                        </div>
+                        <div
+                          class="text-normal-black-color font-lora font-normal text-xs"
+                        >
+                          Dougie Rogers
+                        </div>
                       </div>
-                      <div
-                        class="text-normal-black-color font-lora font-normal text-xs"
-                      >
-                        Dougie Rogers
+                      <div class="text-beige-color font-roboto font-bold">
+                        $90
                       </div>
-                    </div>
-                    <div class="text-beige-color font-roboto font-bold">
-                      $90
                     </div>
                   </div>
-                  <button
-                    class="flex justify-center gap-x-2 w-full text-xs bg-black text-white-color items-center py-1 rounded-sm"
-                  >
-                    <i class="fa fa-cart-shopping"></i>
-                    <div>Add to Cart</div>
-                  </button>
-                </div>
+                </a>
+                <button
+                  class="flex justify-center gap-x-2 w-full text-xs bg-black text-white-color items-center py-1.5 rounded-sm"
+                >
+                  <i class="fa fa-cart-shopping"></i>
+                  <div>Add to Cart</div>
+                </button>
               </div>
-              <div class="flex flex-col w-[15%] gap-y-4 h-[400px]">
-                <img
-                  src="./images/mainPage.png"
-                  alt=""
-                  class="h-[70%] w-full"
-                />
-                <div class="h-[30%] flex flex-col justify-between">
-                  <div class="flex justify-between w-full">
-                    <div class="w-4/5">
-                      <div
-                        class="text-important-black-color font-lora font-bold text-md"
-                      >
-                        Goddess Of Insanity
+              <div class="flex flex-col w-[15%]">
+                <a href="viewBook.html" class="flex flex-col h-full">
+                  <img
+                    src="./images/mainPage.png"
+                    alt=""
+                    class="h-[70%] w-full"
+                  />
+                  <div class="h-[30%] flex flex-col pt-4">
+                    <div class="flex justify-between">
+                      <div class="w-4/5">
+                        <div
+                          class="text-important-black-color font-lora font-bold text-md"
+                        >
+                          Goddess Of Insanity
+                        </div>
+                        <div
+                          class="text-normal-black-color font-lora font-normal text-xs"
+                        >
+                          Dennis Jenkings
+                        </div>
                       </div>
-                      <div
-                        class="text-normal-black-color font-lora font-normal text-xs"
-                      >
-                        Dennis Jenkins
+                      <div class="text-beige-color font-roboto font-bold">
+                        $90
                       </div>
-                    </div>
-                    <div class="text-beige-color font-roboto font-bold w-1/5">
-                      $90
                     </div>
                   </div>
-                  <button
-                    class="flex justify-center gap-x-2 w-full text-xs bg-black text-white-color items-center py-1 rounded-sm"
-                  >
-                    <i class="fa fa-cart-shopping"></i>
-                    <div>Add to Cart</div>
-                  </button>
-                </div>
+                </a>
+                <button
+                  class="flex justify-center gap-x-2 w-full text-xs bg-black text-white-color items-center py-1.5 rounded-sm"
+                >
+                  <i class="fa fa-cart-shopping"></i>
+                  <div>Add to Cart</div>
+                </button>
               </div>
-              <div class="flex flex-col w-[15%] gap-y-4 h-[400px]">
-                <img
-                  src="./images/mainPage.png"
-                  alt=""
-                  class="h-[70%] w-full"
-                />
-                <div class="h-[30%] flex flex-col justify-between">
-                  <div class="flex justify-between w-full">
-                    <div class="w-4/5">
-                      <div
-                        class="text-important-black-color font-lora font-bold text-md line-clamp-2"
-                      >
-                        Thieves Of The Lost World of GWhateverWasMissing
+              <div class="flex flex-col w-[15%]">
+                <a href="viewBook.html" class="flex flex-col h-full">
+                  <img
+                    src="./images/mainPage.png"
+                    alt=""
+                    class="h-[70%] w-full"
+                  />
+                  <div class="h-[30%] flex flex-col pt-4">
+                    <div class="flex justify-between">
+                      <div class="">
+                        <div
+                          class="text-important-black-color font-lora font-bold text-md line-clamp-2"
+                        >
+                          Thieves Of The Lost World of GWhateverWasMissing
+                        </div>
+                        <div
+                          class="text-normal-black-color font-lora font-normal text-xs"
+                        >
+                          Quinn Holland
+                        </div>
                       </div>
-                      <div
-                        class="text-normal-black-color font-lora font-normal text-xs"
-                      >
-                        Quinn Holland
+                      <div class="text-beige-color font-roboto font-bold">
+                        $90
                       </div>
-                    </div>
-                    <div class="text-beige-color font-roboto font-bold w-1/5">
-                      $90
                     </div>
                   </div>
-                  <button
-                    class="flex justify-center gap-x-2 w-full text-xs bg-black text-white-color items-center py-1 rounded-sm"
-                  >
-                    <i class="fa fa-cart-shopping"></i>
-                    <div>Add to Cart</div>
-                  </button>
-                </div>
+                </a>
+                <button
+                  class="flex justify-center gap-x-2 w-full text-xs bg-black text-white-color items-center py-1.5 rounded-sm"
+                >
+                  <i class="fa fa-cart-shopping"></i>
+                  <div>Add to Cart</div>
+                </button>
               </div>
             </div>
           </div>
           <div class="">
             <div class="py-8">Rcently Added</div>
             <div class="flex flex-wrap gap-x-8">
-              <div class="flex flex-col w-[15%] gap-y-4 h-[400px]">
-                <img
-                  src="./images/mainPage.png"
-                  alt=""
-                  class="h-[70%] w-full"
-                />
-                <div class="h-[30%] flex flex-col justify-between">
-                  <div class="flex justify-between">
-                    <div>
-                      <div
-                        class="text-important-black-color font-lora font-bold text-md"
-                      >
-                        Hero with Gold
+              <div class="flex flex-col w-[15%]">
+                <a href="viewBook.html" class="flex flex-col h-full">
+                  <img
+                    src="./images/mainPage.png"
+                    alt=""
+                    class="h-[70%] w-full"
+                  />
+                  <div class="h-[30%] flex flex-col pt-4">
+                    <div class="flex justify-between">
+                      <div class="w-4/5">
+                        <div
+                          class="text-important-black-color font-lora font-bold text-md"
+                        >
+                          Goddess Of Insanity
+                        </div>
+                        <div
+                          class="text-normal-black-color font-lora font-normal text-xs"
+                        >
+                          Dennis Jenkings
+                        </div>
                       </div>
-                      <div
-                        class="text-normal-black-color font-lora font-normal text-xs"
-                      >
-                        Dougie Rogers
+                      <div class="text-beige-color font-roboto font-bold">
+                        $90
                       </div>
-                    </div>
-                    <div class="text-beige-color font-roboto font-bold">
-                      $90
                     </div>
                   </div>
-                  <button
-                    class="flex justify-center gap-x-2 w-full text-xs bg-black text-white-color items-center py-1 rounded-sm"
-                  >
-                    <i class="fa fa-cart-shopping"></i>
-                    <div>Add to Cart</div>
-                  </button>
-                </div>
+                </a>
+                <button
+                  class="flex justify-center gap-x-2 w-full text-xs bg-black text-white-color items-center py-1.5 rounded-sm"
+                >
+                  <i class="fa fa-cart-shopping"></i>
+                  <div>Add to Cart</div>
+                </button>
               </div>
-              <div class="flex flex-col w-[15%] gap-y-4 h-[400px]">
-                <img
-                  src="./images/mainPage.png"
-                  alt=""
-                  class="h-[70%] w-full"
-                />
-                <div class="h-[30%] flex flex-col justify-between">
-                  <div class="flex justify-between w-full">
-                    <div class="w-4/5">
-                      <div
-                        class="text-important-black-color font-lora font-bold text-md"
-                      >
-                        Goddess Of Insanity
+              <div class="flex flex-col w-[15%]">
+                <a href="viewBook.html" class="flex flex-col h-full">
+                  <img
+                    src="./images/mainPage.png"
+                    alt=""
+                    class="h-[70%] w-full"
+                  />
+                  <div class="h-[30%] flex flex-col pt-4">
+                    <div class="flex justify-between">
+                      <div class="w-4/5">
+                        <div
+                          class="text-important-black-color font-lora font-bold text-md"
+                        >
+                          Goddess Of Insanity
+                        </div>
+                        <div
+                          class="text-normal-black-color font-lora font-normal text-xs"
+                        >
+                          Dennis Jenkings
+                        </div>
                       </div>
-                      <div
-                        class="text-normal-black-color font-lora font-normal text-xs"
-                      >
-                        Dennis Jenkins
+                      <div class="text-beige-color font-roboto font-bold">
+                        $90
                       </div>
-                    </div>
-                    <div class="text-beige-color font-roboto font-bold w-1/5">
-                      $90
                     </div>
                   </div>
-                  <button
-                    class="flex justify-center gap-x-2 w-full text-xs bg-black text-white-color items-center py-1 rounded-sm"
-                  >
-                    <i class="fa fa-cart-shopping"></i>
-                    <div>Add to Cart</div>
-                  </button>
-                </div>
+                </a>
+                <button
+                  class="flex justify-center gap-x-2 w-full text-xs bg-black text-white-color items-center py-1.5 rounded-sm"
+                >
+                  <i class="fa fa-cart-shopping"></i>
+                  <div>Add to Cart</div>
+                </button>
               </div>
-              <div class="flex flex-col w-[15%] gap-y-4 h-[400px]">
-                <img
-                  src="./images/mainPage.png"
-                  alt=""
-                  class="h-[70%] w-full"
-                />
-                <div class="h-[30%] flex flex-col justify-between">
-                  <div class="flex justify-between w-full">
-                    <div class="w-4/5">
-                      <div
-                        class="text-important-black-color font-lora font-bold text-md line-clamp-2"
-                      >
-                        Thieves Of The Lost World of GWhateverWasMissing
+              <div class="flex flex-col w-[15%]">
+                <a href="viewBook.html" class="flex flex-col h-full">
+                  <img
+                    src="./images/mainPage.png"
+                    alt=""
+                    class="h-[70%] w-full"
+                  />
+                  <div class="h-[30%] flex flex-col pt-4">
+                    <div class="flex justify-between">
+                      <div class="w-4/5">
+                        <div
+                          class="text-important-black-color font-lora font-bold text-md"
+                        >
+                          Goddess Of Insanity
+                        </div>
+                        <div
+                          class="text-normal-black-color font-lora font-normal text-xs"
+                        >
+                          Dennis Jenkings
+                        </div>
                       </div>
-                      <div
-                        class="text-normal-black-color font-lora font-normal text-xs"
-                      >
-                        Quinn Holland
+                      <div class="text-beige-color font-roboto font-bold">
+                        $90
                       </div>
-                    </div>
-                    <div class="text-beige-color font-roboto font-bold w-1/5">
-                      $90
                     </div>
                   </div>
-                  <button
-                    class="flex justify-center gap-x-2 w-full text-xs bg-black text-white-color items-center py-1 rounded-sm"
-                  >
-                    <i class="fa fa-cart-shopping"></i>
-                    <div>Add to Cart</div>
-                  </button>
-                </div>
+                </a>
+                <button
+                  class="flex justify-center gap-x-2 w-full text-xs bg-black text-white-color items-center py-1.5 rounded-sm"
+                >
+                  <i class="fa fa-cart-shopping"></i>
+                  <div>Add to Cart</div>
+                </button>
               </div>
             </div>
           </div>
