--- a/src/viewBook.html
+++ b/src/viewBook.html
@@ -35,13 +35,19 @@
             </a>
           </li>
           <li>
-            <a href="cart.html" class="flex items-center gap-2 text-[12px]">
+            <a
+              href="shoppingCart.html"
+              class="flex items-center gap-2 text-[12px]"
+            >
               <i class="fa-solid fa-cart-shopping"></i>
               <span>Shopping Cart</span>
             </a>
           </li>
           <li>
-            <a href="orders.html" class="flex items-center gap-2 text-[12px]">
+            <a
+              href="./Orders/orderList.html"
+              class="flex items-center gap-2 text-[12px]"
+            >
               <i class="fa-solid fa-truck-fast"></i>
               <span>Orders</span>
             </a>
