--- a/src/Orders/orderDetails.html
+++ b/src/Orders/orderDetails.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ITP Library</title>
-    <link href="./output.css" rel="stylesheet" />
+    <link href="../output.css" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -29,14 +29,14 @@
         <li class="text-xl font-medium font-lora">ITP Library</li>
         <ul class="flex gap-x-10 uppercase font-medium font-roboto">
           <li>
-            <a href="index.html" class="flex items-center gap-2 text-[12px]">
+            <a href="../index.html" class="flex items-center gap-2 text-[12px]">
               <i class="fa-solid fa-house"></i>
               <span>Home</span>
             </a>
           </li>
           <li>
             <a
-              href="shoppingCart.html"
+              href="../shoppingCart.html"
               class="flex items-center gap-2 text-[12px]"
             >
               <i class="fa-solid fa-cart-shopping"></i>
@@ -45,7 +45,7 @@
           </li>
           <li>
             <a
-              href="./Orders/orderList.html"
+              href="orderList.html"
               class="flex items-center gap-2 text-[12px]"
             >
               <i class="fa-solid fa-truck-fast"></i>
@@ -53,7 +53,10 @@
             </a>
           </li>
           <li>
-            <a href="login.html" class="flex items-center gap-2 text-[12px]">
+            <a
+              href="../Login/login.html"
+              class="flex items-center gap-2 text-[12px]"
+            >
               <i class="fa-solid fa-user"></i>
               <span>Login</span>
             </a>
@@ -72,7 +75,7 @@
             <div class="flex gap-x-8">
               <div class="w-20 h-28">
                 <img
-                  src="./images/mainPage.png"
+                  src="../images/mainPage.png"
                   alt="image-order"
                   class="w-full h-full"
                 />
@@ -81,12 +84,15 @@
                 <div
                   class="font-lora font-semibold text-2xl text-important-black-color"
                 >
-                  Hero with Gold
+                  Order #78234
                 </div>
-                <div class="flex gap-x-2 items-center text-lg">
-                  <span class="text-normal-black-color font-roboto">by</span>
-                  <span class="text-important-black-color font-bold font-lora"
-                    >Dougie Rogers</span
+                <div class="flex gap-x-2 items-center">
+                  <span class="text-normal-black-color font-roboto text-lg"
+                    >Items:</span
+                  >
+                  <span
+                    class="text-important-black-color font-bold font-lora text-lg"
+                    >2</span
                   >
                 </div>
               </div>
@@ -105,7 +111,7 @@
             <div class="flex gap-x-8">
               <div class="w-20 h-28">
                 <img
-                  src="./images/mainPage.png"
+                  src="../images/mainPage.png"
                   alt="image-order"
                   class="w-full h-full"
                 />
@@ -116,9 +122,12 @@
                 >
                   Hero with Gold
                 </div>
-                <div class="flex gap-x-2 items-center text-lg">
-                  <span class="text-normal-black-color font-roboto">by</span>
-                  <span class="text-important-black-color font-bold font-lora"
+                <div class="flex gap-x-2 items-center">
+                  <span class="text-normal-black-color font-roboto text-sm"
+                    >by</span
+                  >
+                  <span
+                    class="text-important-black-color font-bold font-lora text-lg"
                     >Dougie Rogers</span
                   >
                 </div>
@@ -128,41 +137,14 @@
               <div class="text-beige-color font-roboto font-bold text-xl">
                 $90
               </div>
-              <div class="flex gap-x-2 items-center text-sm">
+              <a href="" class="flex gap-x-2 items-center text-sm">
                 <i class="fa-regular fa-trash-can"></i>
-                <span>Remove</span>
-              </div>
+                <span>Edit Order Details</span>
+              </a>
             </div>
           </div>
         </div>
-        <div class="flex justify-between">
-          <div class="flex flex-col gap-y-4">
-            <div
-              class="font-semibold font-lora text-xl text-important-black-color"
-            >
-              Total:
-            </div>
-            <a href="index.html">
-              <button
-                class="border-2 py-1.5 px-10 text-center rounded-md text-xs"
-              >
-                Continue Shopping
-              </button>
-            </a>
-          </div>
-          <div class="flex flex-col items-end gap-y-4">
-            <div class="text-beige-color font-roboto font-bold text-xl">
-              $90
-            </div>
-            <a href="orderDetails.html">
-              <button
-                class="text-center bg-black border-2 border-black rounded-md text-xs text-white px-10 py-1.5"
-              >
-                Place Order
-              </button>
-            </a>
-          </div>
-        </div>
+        <div class="third-item-flex"></div>
       </div>
     </section>
 
