Fixed issue regarding price of books from recently added being outside of the container

--- a/src/index.html
+++ b/src/index.html
@@ -92,17 +92,17 @@
             <div class="py-8">Best Books of the month</div>
             <div class="flex flex-wrap gap-x-8">
               <div class="flex flex-col w-[15%]">
-                <a href="viewBook.html" class="flex flex-col h-full">
+                <a href="viewBook.html" class="flex flex-col h-full w-full">
                   <img
                     src="./images/mainPage.png"
                     alt=""
                     class="h-[70%] w-full"
                   />
-                  <div class="h-[30%] flex py-2 flex-col pt-4">
-                    <div class="flex justify-between">
-                      <div class="">
+                  <div class="h-[30%] flex flex-col pt-4 w-full">
+                    <div class="flex justify-between w-full">
+                      <div class="w-3/4">
                         <div
-                          class="text-important-black-color font-lora font-bold text-md"
+                          class="text-important-black-color font-lora font-bold text-md line-clamp-2"
                         >
                           Hero with Gold
                         </div>
@@ -126,17 +126,17 @@
                 </button>
               </div>
               <div class="flex flex-col w-[15%]">
-                <a href="viewBook.html" class="flex flex-col h-full">
+                <a href="viewBook.html" class="flex flex-col h-full w-full">
                   <img
                     src="./images/mainPage.png"
                     alt=""
                     class="h-[70%] w-full"
                   />
-                  <div class="h-[30%] flex flex-col pt-4">
-                    <div class="flex justify-between">
-                      <div class="w-4/5">
+                  <div class="h-[30%] flex flex-col pt-4 w-full">
+                    <div class="flex justify-between w-full">
+                      <div class="w-3/4">
                         <div
-                          class="text-important-black-color font-lora font-bold text-md"
+                          class="text-important-black-color font-lora font-bold text-md line-clamp-2"
                         >
                           Goddess Of Insanity
                         </div>
@@ -160,15 +160,15 @@
                 </button>
               </div>
               <div class="flex flex-col w-[15%]">
-                <a href="viewBook.html" class="flex flex-col h-full">
+                <a href="viewBook.html" class="flex flex-col h-full w-full">
                   <img
                     src="./images/mainPage.png"
                     alt=""
                     class="h-[70%] w-full"
                   />
-                  <div class="h-[30%] flex flex-col pt-4">
-                    <div class="flex justify-between">
-                      <div class="">
+                  <div class="h-[30%] flex flex-col pt-4 w-full">
+                    <div class="flex justify-between w-full">
+                      <div class="w-3/4">
                         <div
                           class="text-important-black-color font-lora font-bold text-md line-clamp-2"
                         >
@@ -199,19 +199,53 @@
             <div class="py-8">Rcently Added</div>
             <div class="flex flex-wrap gap-x-8">
               <div class="flex flex-col w-[15%]">
-                <a href="viewBook.html" class="flex flex-col h-full">
+                <a href="viewBook.html" class="flex flex-col h-full w-full">
                   <img
                     src="./images/mainPage.png"
                     alt=""
                     class="h-[70%] w-full"
                   />
-                  <div class="h-[30%] flex flex-col pt-4">
-                    <div class="flex justify-between">
-                      <div class="w-4/5">
+                  <div class="h-[30%] flex flex-col pt-4 w-full">
+                    <div class="flex justify-between w-full">
+                      <div class="w-3/4">
                         <div
-                          class="text-important-black-color font-lora font-bold text-md"
+                          class="text-important-black-color font-lora font-bold text-md line-clamp-2"
                         >
-                          Goddess Of Insanity
+                          Hero of Gold
+                        </div>
+                        <div
+                          class="text-normal-black-color font-lora font-normal text-xs"
+                        >
+                          Dougie Rogers
+                        </div>
+                      </div>
+                      <div class="text-beige-color font-roboto font-bold">
+                        $90
+                      </div>
+                    </div>
+                  </div>
+                </a>
+                <button
+                  class="flex justify-center gap-x-2 w-full text-xs bg-black text-white-color items-center py-1.5 rounded-sm"
+                >
+                  <i class="fa fa-cart-shopping"></i>
+                  <div>Add to Cart</div>
+                </button>
+              </div>
+              <div class="flex flex-col w-[15%]">
+                <a href="viewBook.html" class="flex flex-col h-full w-full">
+                  <img
+                    src="./images/mainPage.png"
+                    alt=""
+                    class="h-[70%] w-full"
+                  />
+                  <div class="h-[30%] flex flex-col pt-4 w-full">
+                    <div class="flex justify-between w-full">
+                      <div class="w-3/4">
+                        <div
+                          class="text-important-black-color font-lora font-bold text-md line-clamp-2"
+                        >
+                          Goddesss of Insanity
                         </div>
                         <div
                           class="text-normal-black-color font-lora font-normal text-xs"
@@ -233,58 +267,24 @@
                 </button>
               </div>
               <div class="flex flex-col w-[15%]">
-                <a href="viewBook.html" class="flex flex-col h-full">
+                <a href="viewBook.html" class="flex flex-col h-full w-full">
                   <img
                     src="./images/mainPage.png"
                     alt=""
                     class="h-[70%] w-full"
                   />
-                  <div class="h-[30%] flex flex-col pt-4">
-                    <div class="flex justify-between">
-                      <div class="w-4/5">
+                  <div class="h-[30%] flex flex-col pt-4 w-full">
+                    <div class="flex justify-between w-full">
+                      <div class="w-3/4">
                         <div
-                          class="text-important-black-color font-lora font-bold text-md"
+                          class="text-important-black-color font-lora font-bold text-md line-clamp-2"
                         >
-                          Goddess Of Insanity
+                          Thieves Of The Lost World of GWhateverWasMissing
                         </div>
                         <div
                           class="text-normal-black-color font-lora font-normal text-xs"
                         >
-                          Dennis Jenkings
-                        </div>
-                      </div>
-                      <div class="text-beige-color font-roboto font-bold">
-                        $90
-                      </div>
-                    </div>
-                  </div>
-                </a>
-                <button
-                  class="flex justify-center gap-x-2 w-full text-xs bg-black text-white-color items-center py-1.5 rounded-sm"
-                >
-                  <i class="fa fa-cart-shopping"></i>
-                  <div>Add to Cart</div>
-                </button>
-              </div>
-              <div class="flex flex-col w-[15%]">
-                <a href="viewBook.html" class="flex flex-col h-full">
-                  <img
-                    src="./images/mainPage.png"
-                    alt=""
-                    class="h-[70%] w-full"
-                  />
-                  <div class="h-[30%] flex flex-col pt-4">
-                    <div class="flex justify-between">
-                      <div class="w-4/5">
-                        <div
-                          class="text-important-black-color font-lora font-bold text-md"
-                        >
-                          Goddess Of Insanity
-                        </div>
-                        <div
-                          class="text-normal-black-color font-lora font-normal text-xs"
-                        >
-                          Dennis Jenkings
+                          Quinn Holland
                         </div>
                       </div>
                       <div class="text-beige-color font-roboto font-bold">
